# live-translation-backend

./: .gitignore  Dockerfile  deployment.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: career_data.py  reports.py  rooms.py  sts_rooms.py  telephony.py  tokens.py  webhooks.py
app/core/: config.py  database.py  livekit.py
app/models/: career_data.py  report.py
app/repositories/: career_data_repository.py  report_repository.py
app/schemas/: career_data.py  report.py  room.py  sts_room.py  telephony.py  token.py
app/services/: background_evaluation.py  career_data_service.py  evaluation_service.py  livekit_service.py  report_service.py  sts_room_service.py  telephony_service.py
