[project]
name = "translation-agent-backend"
version = "0.1.0"
description = "FastAPI Room creation and management backend for LiveKit Realtime Translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "livekit-api>=0.2.1",
]
